force-app/main/default/objects/Scrum_Team__c/Scrum_Team__c.object-meta.xml
<CustomObject>
    <label>Scrum Team</label>
    <nameField>
        <label>Scrum Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scrum Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>