force-app/main/default/objects/Scrum_Team__c/fields/Expected_Team_Size__c.field-meta.xml
<CustomField>
    <fullName>Expected_Team_Size__c</fullName>
    <formula>Team_Allocation_Template__r.Template_Team_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Team Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>