force-app/main/default/objects/Scrum_Team__c/fields/GUS_URL__c.field-meta.xml
<CustomField>
    <fullName>GUS_URL__c</fullName>
    <label>GUS URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>