force-app/main/default/objects/Scrum_Team__c/fields/Team_Allocation_Template__c.field-meta.xml
<CustomField>
    <fullName>Team_Allocation_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team Allocation Template</label>
    <referenceTo>Scrum_Team_Template__c</referenceTo>
    <relationshipLabel>Scrum Teams</relationshipLabel>
    <relationshipName>Scrum_Teams</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>