force-app/main/default/objects/Scrum_Team__c/fields/Team_Size__c.field-meta.xml
<CustomField>
    <fullName>Team_Size__c</fullName>
    <label>Team Size</label>
    <summaryForeignKey>Team_Assignment__c.Scrum_Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>